HelloUltraviolet/Fixtures/RejectedSource/Statements/AsyncReturnTypeMismatch/Expected.uv
//! Expected diagnostic metadata for the AsyncReturnTypeMismatch rejected-source specimen.

expectedDiagnostic("E-CON-0203", "rule.18.Return-Async-Type-Err")
